--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,35 +21,35 @@
 }
 
 body {
-  min-height: 100vh;
   background: var(--color-bg);
   font-family: 'Noto Serif', serif;
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings: 'wdth' 100;
+  margin: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Main container */
 .container {
+  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: var(--spacing-md);
-  width: min-content;
+  width: 100%;
 }
 
 /* DateTime display */
 .datetime {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 3.5%;
+  gap: 5%;
   text-align: center;
-  width: 100%;
+  width: 90vw;
   font-weight: 500;
+  max-width: 1500px;
 }
 
 .datetime > div {
@@ -62,6 +62,7 @@ body {
 
 /* Controls */
 .controls {
+  display: none;
   position: fixed;
   bottom: var(--margin-edge);
   right: var(--margin-edge);
